第一回更改

--- a/index.html
+++ b/index.html
@@ -59,11 +59,18 @@
         <div role="main" class="ui-content">
 
             <h1>今晚我想來點....推薦美食</h1>
-            <a href="#page1">燒烤</a>
-            <a href="#page2">西式餐點</a>
-            <a href="#page3">火鍋</a>
-            <a href="#page4">牛排</a>
-            <a href="#aboutus">關於我們</a>
+
+            <div data-role="controlgroup" data-type="horizontal">
+            <a href="#page1" data-role="button"class="ui-btn ui-icon-arrow-r ui-btn-icon-right">燒烤</a>
+            <a href="#page2" data-role="button"class="ui-btn ui-icon-arrow-r ui-btn-icon-right">西式餐點</a>
+            <a href="#page3" data-role="button"class="ui-btn ui-icon-arrow-r ui-btn-icon-right">火鍋</a>
+            <a href="#page4" data-role="button"class="ui-btn ui-icon-arrow-r ui-btn-icon-right">牛排</a>
+            <a href="#aboutus" data-role="button" data-transition="fade"class="ui-btn ui-icon-arrow-r ui-btn-icon-right">關於我們</a>
+            <div data-role="collapsible">
+                <h1>look at me!</h1>
+                <p>看我</p>
+                </div>
+        </div>
 
         </div><!-- /content -->
 
